# AuroraPlayer

./: .trashed-1780809232-README.md  LICENSE  README.md  package-lock.json  package.json
aurora-fixed/: README.md  package-lock.json  package.json
aurora-fixed/src/: app.js  index.html
aurora-fixed/src-tauri/: Cargo.toml
aurora-fixed/src-tauri/icons/: icon.icns
aurora-fixed/src-tauri/src/: main.rs
src/: app.js  index.html  style.css  tauri-api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
