[package]
name = "aurora-player"
version = "1.0.0"
description = "Aurora — Local Music Player"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "protocol-asset",
  "dialog-open",
  "fs-read-dir",
  "fs-read-file",
  "fs-write-file",
  "fs-create-dir",
  "path-all",
  "window-close",
  "window-minimize",
  "window-maximize",
  "window-unmaximize",
  "window-start-dragging",
  "shell-open"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
percent-encoding = "2.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
